# LLM-Checkmate

./: .gitignore  README.md  deployment.md  package.json
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  index.css
llm-checkmate-agent/: README.md  pyproject.toml
llm-checkmate-agent/llm_checkmate_agent/: __init__.py  __main__.py  cli.py  device_id.py  scanner.py  sender.py
server/: index.js  package-lock.json  package.json
